--- a/packages/tpstech-catppuccin-vsc-pack/package.json
+++ b/packages/tpstech-catppuccin-vsc-pack/package.json
@@ -1,9 +1,9 @@
 {
   "name": "tpstech-catppuccin-vsc-pack",
-  "displayName": "Catppuccin by tpsTech Pack",
+  "displayName": "Catppuccin Theme & Icon Pack by tpsTech",
   "version": "1.1.0",
   "private": true,
-  "description": "Combines a soothing pastel theme based on Catppuccin with adjusted syntax highlighting with Catppuccin Icons for VSCode",
+  "description": "Combines a soothing pastel theme based on the Catppuccin theme with adjusted syntax highlighting and Catppuccin Icons for VSCode",
   "categories": [
     "Extension Packs"
   ],
